<resources>
    <string name="app_name">NbaCloneApp</string>
    <string name="teams_logo">teams_logo</string>
    <string name="players_logo">players_logo</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="games">Games</string>
    <string name="games_logo">games_logo</string>
    <string name="team_name">Team: %s</string>
    <string name="team_conference">Conference: %s</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="retry">Retry</string>
</resources>