<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.presentation.ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16dp"
        android:clipChildren="false"
        app:paddingTopSystemWindowInsets="true">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@id/tvTeams"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            app:marginLeftSystemWindowInsets="true"
            app:srcCompat="@drawable/ic_theme_logo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivLogo"
            app:marginRightSystemWindowInsets="true"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <TextView
            android:id="@+id/tvTeams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="start"
            android:text="@string/teams"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvTeams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTeams">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200dp"
                android:contentDescription="@string/teams_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/teams_logo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="start"
            android:text="@string/players"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcvTeams" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvPlayers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPlayers">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200dp"
                android:contentDescription="@string/players_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/players" />
        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/tvGames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="start"
            android:text="@string/games"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcvPlayers" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvGames"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGames">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200dp"
                android:contentDescription="@string/games_logo"
                android:scaleType="centerCrop"
                android:src="@drawable/game" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/size_48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mcvGames" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>